# ros2_multi_dag_rp_scheduler

./: .gitignore  README.md  phase15_sweep.sh  phase16_generate_report.py  phase16_run_best.sh
baseline_smoke/: smoke_multi4_runinfo.txt  smoke_single_runinfo.txt
phase15/: summary.csv
phase16/: REPRODUCE.md  best_worst_configs.csv  cross_configuration_table.csv  dag_enforcement_check.csv  deadline_scale_aggregate.csv  final_report.md  log_extracted_metrics.csv  log_summary_mismatches.csv  max_active_pair_aggregate.csv  threads_aggregate.csv
src/default_executor_baseline/: CMakeLists.txt  README.md  package.xml
src/default_executor_baseline/scripts/: configure_cpu_environment.sh  plot_default_executor_results.py  run_default_executor_matrix.sh
src/default_executor_baseline/src/: default_executor_baseline.cpp
src/multi_dag_demo/: CMakeLists.txt  package.xml
src/multi_dag_demo/src/: camera_node.cpp  control_node.cpp  detection_node.cpp  lidar_node.cpp  main.cpp  perception_node.cpp  planning_node.cpp  tracking_node.cpp
src/rp_executor/: CMakeLists.txt  package.xml
src/rp_executor/include/rp_executor/: rp_executor.hpp
src/rp_executor/src/: rp_executor.cpp
