<?xml version="1.0"?>
<package format="3">
  <name>default_executor_baseline</name>
  <version>0.1.0</version>
  <description>Reproducible baseline experiments using unmodified ROS 2 default executors.</description>
  <maintainer email="mehedi@example.com">Mehedi Hasan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
